// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prueba a <FirstApp/> match con snapshot 1`] = `
<div>
  <div>
    <h1>
      title
    </h1>
    <p>
      No hay subtitulo
    </p>
    <p>
      No hay nombre
    </p>
  </div>
</div>
`;

exports[`prueba a <FirstApp/> match snapshot 1`] = `
<div>
  <div>
    <h1>
      titulo
    </h1>
    <p>
      No hay subtitulo
    </p>
    <p>
      No hay nombre
    </p>
  </div>
</div>
`;
